fix: teacher form setup
